# qsuite

./: .gitignore  README.md  environment.yml  pyproject.toml  pyvenv.cfg
qsuite/: submitjob.py
qsuite/jobscripts/: SLURMdummy.sh
qsuite/templates/: qsuite_config.py
qsuite_test/: qsuite_config.py
qsuite_test/results_brownian_NMEAS_10_ONLYSAVETIME_False/: simulation.py
