[project]
name = "qsuite"
version = "0.4.14"
description = "A CLI to submit and retrieve large-scale jobs/results to and from HPC clusters."
authors = [{name = "Benjamin F. Maier", email = "benjaminfrankmaier@gmail.com"}]
license = {text = "MIT"}
requires-python = ">= 3.11"
dependencies = [
    "numpy>=1.17",
    "paramiko>=2.7.2",
    "pathos>=0.2.7",
    "tabulate>=0.8.7",
    "python-dotenv>=1.0.0",
    "pathlib>=1.0.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/benmaier/qsuite"
Repository = "https://github.com/benmaier/qsuite"

[project.scripts]
qsuite = "qsuite.qsuite_binary:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.setuptools]
packages = ["qsuite"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
qsuite = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
# Development dependencies can be added here if needed
